# twitter

./: .gitignore  README.md
backend/: prompt_testing.py  pyproject.toml  server.py
backend/runs/: tweets-0b850512-b110-4d28-9777-4a0be4cac92e.json  tweets-0f2ef33c-1900-4151-bbf0-8d7f56478b39.json  tweets-188b4359-0024-481f-b7e0-38e9f2a3fc40.json  tweets-1afc1a38-bc72-4534-9969-e95a49a9cecf.json  tweets-2b09adeb-a58f-4f31-8131-7aee47c8a409.json  tweets-32bc569d-e338-46f6-a78c-767ff49f605c.json  tweets-54eeb3d9-5b91-472b-a36e-111105a073e1.json  tweets-618fcf88-416f-4039-9d2f-18053e710514.json  tweets-67d3824c-3da4-43c7-b818-7aaf289e5b44.json  tweets-711f115a-2164-480a-8c93-411c88eeea53.json  tweets-734fc364-40ab-49cb-b3a9-37ff28a8e015.json  tweets-83fb2c79-762f-45d3-9e59-8bdd84f5ad2f.json  tweets-881dea7d-9392-439d-853d-02e22849f221.json  tweets-9738ac07-60d4-4b3f-aca7-0ba016b23876.json  tweets-a3422d1c-cc31-4434-a653-41f0c6bf417e.json  tweets-d487a379-2091-4c71-b936-c49b8b7bb1e3.json  tweets-d4a296bf-5573-4ea0-8f8e-cec68673ce35.json  tweets-e42e7969-d89b-4e9e-ba60-2860d4cf57f1.json  tweets-f05e35ab-82e1-4a3e-8abf-06d1d6f78f3c.json  tweets-f88a8acf-7989-4129-b381-216a78ccbecf.json  tweets-fab4415f-320c-444d-bdc4-340b47d659c2.json
backend/samples/: initjudges copy.json  initjudges.json  initjudges.py  jess.json  judges.txt
backend/samples/bios/: 8enmann.json  PaigeBailey.json  RazRazcle.json  ShreyaR.json  TreybigDavis.json  dina_yrl.json  harinidkannan.json  hwchase17.json  jerryjliu0.json  jffwng.json  pirroh.json  rachel_l_woods.json  tristanzajonc.json  vivnat.json
backend/samples/raw/: 0interestrates.json  8enmann.json  AOC.json  AutismCapital.json  BasedBeffJezos.json  PaigeBailey.json  RazRazcle.json  ShreyaR.json  TreybigDavis.json  TurnerNovak.json  andrewmccalip.json  dieworkwear.json  dina_yrl.json  (+23 more)
backend/samples_backup/: jess.json
backend/src/: config.py  prompt_testing.py  server.py
python/: prompt_testing.py  pyproject.toml
python/samples/: jess.json
(+31 files in other folders)
