[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["John Sungjin Kim <jsjkim00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anthropic = "^0.3.6"
ipykernel = "^6.25.0"
ipywidgets = "^8.0.7"
langchain = "^0.0.247"
python-dotenv = "^1.0.0"
fastapi = "^0.100.1"
uvicorn = { extras = ["standard"], version = "^0.23.1" }
matplotlib = "^3.7.2"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.318"
ruff = "^0.0.280"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
ignore = ["E501"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

reportMissingTypeStubs = "warning"

reportUnusedImport = "warning"
reportUnusedVariable = "warning"

reportPrivateImportUsage = "none"

reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
