[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["John Sungjin Kim <jsjkim00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.3.6"
ipykernel = "^6.25.0"
ipywidgets = "^8.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
